2.1

* Add ability to disable any build configuration
* Support gradle wrapper execution for gradle projects including it

* Fix importing of child modules in large maven projects
* Resolve issue with exceptions adding issues with very long summaries - Issue:104
* Fix issue where search results could crash if matched keywords were substrings of others

2.1-beta1

* Add multiple attachments in one submission - issue:85
* Allow editing of comments and time worked - issue:87
* Allow deleting of comments, attachments and time worked - issue:86
* Add a HipChat notifier - issue:88
* Add quick add issue and milestone rows to the tables - issue:76 and issue:81
* Add select all and select none buttons to filters - issue:97
* Support setting the group a milestone is in directly - issue:99 and issue:100
* Don't automatically watch a new issue unless the user chooses to - issue:103
* Add issue summary to all issue page titles - issue:102
* Disable submit buttons once pressed to avoid double submissions - issue:98


2.0.1

* For Xcode builds append appropriate -destination parameter when testing on simulator
* Fix Xcodebuild for latest CocoaPods
* Fix icon paths for the build status API
* Ensure milestones and groups have a valid associated time period before being graphed.
* Fix an issue where the dueDate calculations of a milestoneGroup could crash the edit milestone page.


2.0

* Fix issue where overworked icons could appear against issues that have been re-estimated but not started

2.0-rc3

* Add build status endpoint to APIs
* Use XCPretty to tidy XCode build output, if installed
* Add option for projects to be added from SCM branches

* Fix issue where ordering issues by type only ordered by priority
* Correctly parse Xcode 5 test logs
* Fix issue where xcode build directories are not correctly cleared if using CocoaPods
* Fix issue with maven version parsing if a version range was used