@@ -2,6 +2,7 @@
 
 * Add ability to disable any build configuration
 * Support gradle wrapper execution for gradle projects including it
+* Allow notifier configurations to ignore certain events
 
 * Fix importing of child modules in large maven projects
 * Resolve issue with exceptions adding issues with very long summaries - Issue:104
